...
}

class FirstTabViewController: UITableViewController, HeaderStickyTabChildViewController {
    var scrollView: UIScrollView {
        return self.tableView
    }
    var tabTitle: String = "First"
    
    lazy var data: [String] = {
        var array: [String] = []
        for i in 0..<100 {
            array.append("Row \(i)")
        }
...
}

class SecondTabViewController: UITableViewController, HeaderStickyTabChildViewController {
    var scrollView: UIScrollView {
        return self.tableView
    }
    var tabTitle: String = "Second"
    
    lazy var data: [(String, String)] = {
        var array: [(String, String)] = []
        for i in 0..<100 {
            array.append(("Hello Title \(i)", "This is detail \(i)"))
        }
...
