...
                        <constraint firstAttribute="trailing" secondItem="vPe-ZJ-aDU" secondAttribute="trailing" id="axf-H6-VJf"/>
                        <constraint firstItem="vPe-ZJ-aDU" firstAttribute="top" secondItem="lrd-hD-vl7" secondAttribute="top" id="etn-QR-K4j"/>
                        <constraint firstAttribute="height" constant="120" id="i9s-CJ-hA3"/>
                        <constraint firstAttribute="width" constant="120" id="lmy-ZS-Ru6"/>
                    </constraints>
                </view>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Psv-t3-MfT">
                    <rect key="frame" x="148" y="169" width="246" height="21"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lm5-bd-z4l">
...
